--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,7 +13,7 @@
 }
 
 .login_btn {
-  background-image: linear-gradient(#004e27, #081e0e, #020103);
+  background-image: linear-gradient(#3544ff, #0013f9, #000870);
   height: 45px;
   font-size: 18px;
   border-radius: 20px;
@@ -26,7 +26,7 @@
 }
 
 .login_btn:hover {
-  border: 1px solid #46b8da;
+  border: 1px solid #0e20ff;
 }
 
 .error {
@@ -42,7 +42,7 @@
 
 .default_select {
   color: #fff;
-  background: linear-gradient(#2ee983, #257248);
+  background: linear-gradient(#5c69ff, #2132ff);
   line-height: 1.15;
   padding: 5px;
   height: 3rem;
