fix remaining color, fix bug, refactor code

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -34,7 +34,7 @@
 }
 
 .text_vip {
-  text-shadow: 0 0 4px #00d741;
+  text-shadow: 0 0 4px #e6e7ff;
   letter-spacing: 1px;
   color: #fff;
   font-size: 15px;
