--- a/src/styles/slider.css
+++ b/src/styles/slider.css
@@ -17,5 +17,5 @@
 
 .home-slider .slick-active {
   height: 0px;
-  background-color: rgb(17 200 103)!important;
+  background-color: #2132ff!important;
 }
